[gd_scene load_steps=12 format=3 uid="uid://22261o7w4a0r"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_318yp"]
[ext_resource type="Texture2D" uid="uid://ql3dx8yyjhdr" path="res://assets/grass.png" id="1_nt07q"]
[ext_resource type="PackedScene" uid="uid://dooc0qfm1gexb" path="res://scenes/player/player.tscn" id="2_ccybs"]
[ext_resource type="PackedScene" uid="uid://dld5tcnsp1wrv" path="res://scenes/objects/coin.tscn" id="2_qx0lo"]
[ext_resource type="PackedScene" uid="uid://1p40iqllomk4" path="res://scenes/objects/power_up.tscn" id="3_c0d1c"]
[ext_resource type="PackedScene" uid="uid://ve6utwb4tl1k" path="res://scenes/hud.tscn" id="5_5squq"]
[ext_resource type="PackedScene" uid="uid://dalawlksnrqel" path="res://scenes/objects/cactus.tscn" id="7_x2cmf"]
[ext_resource type="AudioStream" uid="uid://d42wj3vpoxov" path="res://assets/audio/Coin.wav" id="8_4ftyr"]
[ext_resource type="AudioStream" uid="uid://dko0gv7fdfqlu" path="res://assets/audio/EndSound.wav" id="9_ei5ty"]
[ext_resource type="AudioStream" uid="uid://d2b1yhb3ruy3k" path="res://assets/audio/Level.wav" id="10_4c5si"]
[ext_resource type="AudioStream" uid="uid://cc1iekvuoc4cu" path="res://assets/audio/Powerup.wav" id="11_jkbww"]

[node name="Main" type="Node"]
script = ExtResource("1_318yp")
coin_scene = ExtResource("2_qx0lo")
powerup_scene = ExtResource("3_c0d1c")
play_time = 15.0

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nt07q")

[node name="Cactus" parent="." instance=ExtResource("7_x2cmf")]
position = Vector2(89, 257)

[node name="Cactus2" parent="." instance=ExtResource("7_x2cmf")]
position = Vector2(436, 467)

[node name="Cactus3" parent="." instance=ExtResource("7_x2cmf")]
position = Vector2(51, 591)

[node name="Player" parent="." instance=ExtResource("2_ccybs")]

[node name="Hud" parent="." instance=ExtResource("5_5squq")]

[node name="GameTimer" type="Timer" parent="."]

[node name="PowerUpTimer" type="Timer" parent="."]
one_shot = true

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_4ftyr")

[node name="EndSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ei5ty")

[node name="LevelSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_4c5si")

[node name="PowerUpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_jkbww")

[connection signal="hurt" from="Player" to="." method="_on_player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_player_pickup"]
[connection signal="start_game_sgn" from="Hud" to="." method="_on_hud_start_game_sgn"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
